# web_concurrency

./: .gitignore  Dockerfile  manage.py  pyproject.toml  requirements.txt
web_concurrency/: asgi.py  settings.py  urls.py  wsgi.py
